@@ -6,6 +6,9 @@ v1.0.12.0 - unreleased
  FIXED  : Incorrect colors on video when using YUV mixing and "VMR Color controls"
  FIXED  : EVR custom didn't display image with Microsoft MPEG2 decoder (Vista)
  FIXED  : PN31 driver installation was not working
+ FIXED  : MPC graph manager now use the same filter priority as WMP and graphedit (clsid patch)
+ FIXED  : MPC-HC is now recognize as an application by SUMo (http://www.kcsoftwares.com/index.php?sumo)
+ FIXED  : Ghost horizontal and vertical lines with Pixel Shader resizer (especially on ATI graphics card)
 
 v1.0.11.0 - 14.Oct 2007
 ======================
